# precli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  SECURITY.md  mkdocs.yml  pylintrc  requirements.txt  results.sarif  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: dependency-review.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  unit-test.yml  upload-asset.yml
custom/: eval.rb  requests-insecure-verify.yaml
custom/c_sharp/: csharp-process-start-dynamic.yaml  start.cs
custom/cpp/: cpp-system-call.yaml  sysinput.cpp
custom/css/: css-important-usage.yaml  important.css
custom/go/: exec.go  go-exec-command.yaml
custom/haskell/: haskell-unsafe-perform-io.yaml  unsafePerformIO.hs
custom/java/: Exec.java  java-runtime-exec.yaml
custom/javascript/: js-eval-usage.yaml  userinput.js
custom/python/: python-requests-insecure-verify.yaml  requests_get_verify_false.py
custom/ruby/: ruby-eval-usage.yaml
custom/scala/: ExecutionContext.scala  scala-global-executioncontext.yaml
custom/swift/: HomeDirectory.swift  swift-nshomedirectory-path-concat.yaml
docs/: getting-started.md  index.md  requirements.txt  rules.md
docs/man/: precli.md  precli.rst
docs/rules/go/stdlib/: crypto-unrestricted-bind.md  crypto-weak-cipher.md  crypto-weak-hash.md  crypto-weak-key.md  crypto_weak_hash.md  net-http-no-timeout.md  net-unrestricted-bind.md  syscall-setuid-root.md
docs/rules/java/stdlib/: java-net-insecure-cookie.md  java-security-weak-hash.md  java-security-weak-key.md  java-security-weak-random.md  javax-crypto-weak-cipher.md  javax-servlet-http-insecure-cookie.md
docs/rules/python/stdlib/: argparse-sensitive-info.md  argparse_sensitive_info.md  assert.md  crypt-weak-hash.md  crypt_weak_hash.md  ftplib-cleartext.md  ftplib-no-timeout.md  ftplib-unverified-context.md  ftplib_cleartext.md  ftplib_unverified_context.md  hashlib-improper-prng.md  hashlib-weak-hash.md  hashlib_weak_hash.md  hmac-timing-attack.md  hmac-weak-hash.md  hmac-weak-key.md  hmac_timing_attack.md  hmac_weak_hash.md  http-server-unrestricted-bind.md  http-url-secret.md  http_url_secret.md  imaplib-cleartext.md  imaplib-no-timeout.md  imaplib-unverified-context.md  imaplib_cleartext.md  imaplib_unverified_context.md  json-load.md  json_load.md  logging-insecure-listen-config.md  logging_insecure_listen_config.md  marshal-load.md  marshal_load.md  nntplib-cleartext.md  nntplib-no-timeout.md  nntplib-unverified-context.md  nntplib_cleartext.md  nntplib_unverified_context.md  os-loose-file-perm.md  os-setuid-root.md  pathlib-loose-file-perm.md  (+33 more)
docs/source/: conf.py  getting-started.rst  index.rst  rules.rst
docs/source/man/: precli.rst
docs/source/rules/go/: index.rst
docs/source/rules/python/: index.rst
docs/stylesheets/: extra.css
examples/: complex.py  imports.py  jsonpickle_decode.py  yaml_load.py
images/: example.cast
precli/: __init__.py  __main__.py  i18n.py
precli/cli/: init.py  main.py
precli/core/: argument.py  artifact.py  base_parser.py  call.py  comparison.py  config.py  cwe.py  fix.py  kind.py  level.py  linecache.py  loader.py  location.py  metrics.py  parser.py  redos.py  result.py  rule.py  run.py  status.py  suppression.py  symtab.py  tool.py  utils.py
precli/locale/de/LC_MESSAGES/: messages.po
precli/locale/en_GB/LC_MESSAGES/: messages.po
precli/locale/es/LC_MESSAGES/: messages.po
precli/locale/fr/LC_MESSAGES/: messages.po
precli/locale/it/LC_MESSAGES/: messages.po
precli/locale/ja/LC_MESSAGES/: messages.po
precli/locale/ko/LC_MESSAGES/: messages.po
precli/locale/pt_BR/LC_MESSAGES/: messages.po
precli/locale/ru/LC_MESSAGES/: messages.po
precli/locale/zh_CN/LC_MESSAGES/: messages.po
precli/locale/zh_TW/LC_MESSAGES/: messages.po
precli/parsers/: __init__.py  base_impl.py  base_parser.py  basic.py  go.py  java.py  node_types.py  python.py  tokens.py
precli/renderers/: __init__.py  detailed.py  json.py  markdown.py  plain.py  renderer.py
precli/rules/: __init__.py
precli/rules/go/golang_org_x_crypto/: ssh_insecure_ignore_hostkey.py  weak_cipher.py  weak_hash.py
precli/rules/go/golang_org_x_crypto_ssh/: ssh_insecure_ignore_hostkey.py
precli/rules/go/stdlib/: crypto_unrestricted_bind.py  crypto_weak_cipher.py  crypto_weak_hash.py  crypto_weak_key.py  net_http_no_timeout.py  net_unrestricted_bind.py  syscall_setuid_root.py
precli/rules/java/stdlib/: crypto_weak_cipher.py  java_net_insecure_cookie.py  java_security_weak_hash.py  java_security_weak_key.py  java_security_weak_random.py  javax_crypto_weak_cipher.py  javax_servlet_http_insecure_cookie.py
precli/rules/python/Flask/: flask_run_debug.py
precli/rules/python/M2Crypto/: m2crypto_weak_key.py
precli/rules/python/PyYAML/: yaml_load.py
precli/rules/python/aiohttp/: no_certificate_verify.py
precli/rules/python/cryptography/: cryptography_weak_cipher.py  cryptography_weak_cipher_mode.py  cryptography_weak_hash.py  cryptography_weak_key.py
precli/rules/python/dill/: dill_load.py
precli/rules/python/httpx/: no_certificate_verify.py
precli/rules/python/jsonpickle/: jsonpickle_decode.py
precli/rules/python/lang/: yaml_load.py
precli/rules/python/pandas/: pandas_read_pickle.py
precli/rules/python/paramiko/: paramiko_no_host_key_verify.py
precli/rules/python/pycrypto/: pycrypto_weak_cipher.py  pycrypto_weak_hash.py  pycrypto_weak_key.py
precli/rules/python/pycryptodomex/: pycryptodomex_weak_cipher.py  pycryptodomex_weak_hash.py  pycryptodomex_weak_key.py
precli/rules/python/pyghmi/: pyghmi_cleartext.py
precli/rules/python/pyopenssl/: insecure_tls_method.py  pyopenssl_weak_key.py
precli/rules/python/requests/: no_certificate_verify.py
precli/targets/: __init__.py  file.py  github.py  pypi.py
scripts/: main.py
tests/unit/cli/: test_init.py  test_main.py
tests/unit/core/: test_python.py
tests/unit/parsers/: test_go.py  test_python.py
tests/unit/rules/: test_case.py
(+902 files in other folders)
