[metadata]
name = precli
summary = Static analysis security tool command line
description_file =
    README.md
author = Secure Sauce
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Security
project_urls =
    Release notes = https://github.com/securesauce/precli/releases

[entry_points]
console_scripts =
    precli = precli.cli.main:main

precli.parsers =
    # precli/parsers/java.py
    java = precli.parsers.java:Java

    # precli/parsers/python.py
    python = precli.parsers.python:Python

precli.rules.python =
    # precli/rules/python/stdlib/assert/assert.py
    PRE0001 = precli.rules.python.stdlib.assert.assert:Assert

    # precli/rules/python/stdlib/crypt/crypt_weak_hash.py
    PRE0002 = precli.rules.python.stdlib.crypt.crypt_weak_hash:CryptWeakHash

    # precli/rules/python/stdlib/ftplib/ftp_cleartext.py
    PRE0003 = precli.rules.python.stdlib.ftplib.ftp_cleartext:FtpCleartext

    # precli/rules/python/stdlib/hashlib/hashlib_weak_hash.py
    PRE0004 = precli.rules.python.stdlib.hashlib.hashlib_weak_hash:HashlibWeakHash

    # precli/rules/python/stdlib/hmac/hmac_timing_attack.py
    PRE0005 = precli.rules.python.stdlib.hmac.hmac_timing_attack:HmacTimingAttack

    # precli/rules/python/stdlib/hmac/hmac_weak_hash.py
    PRE0006 = precli.rules.python.stdlib.hmac.hmac_weak_hash:HmacWeakHash

    # precli/rules/python/stdlib/imaplib/imap_cleartext.py
    PRE0007 = precli.rules.python.stdlib.imaplib.imap_cleartext:ImapCleartext

    # precli/rules/python/stdlib/json/json_load.py
    PRE0008 = precli.rules.python.stdlib.json.json_load:JsonLoad

    # precli/rules/python/stdlib/logging/insecure_listen_config.py
    PRE0009 = precli.rules.python.stdlib.logging.insecure_listen_config:InsecureListenConfig

    # precli/rules/python/stdlib/marshal/marshal_load.py
    PRE0010 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad

    # precli/rules/python/stdlib/nntplib/nntp_cleartext.py
    PRE0011 = precli.rules.python.stdlib.nntplib.nntp_cleartext:NntpCleartext

    # precli/rules/python/stdlib/pickle/pickle_load.py
    PRE0012 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad

    # precli/rules/python/stdlib/poplib/pop_cleartext.py
    PRE0013 = precli.rules.python.stdlib.poplib.pop_cleartext:PopCleartext

    # precli/rules/python/stdlib/shelve/shelve_open.py
    PRE0014 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen

    # precli/rules/python/stdlib/smtplib/smtp_cleartext.py
    PRE0015 = precli.rules.python.stdlib.smtplib.smtp_cleartext:SmtpCleartext

    # precli/rules/python/stdlib/ssl/create_unverified_context.py
    PRE0016 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext

    # precli/rules/python/stdlib/ssl/insecure_tls_version.py
    PRE0017 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion

    # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
    PRE0018 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext

    # precli/rules/python/stdlib/tempfile/mktemp_race_condition.py
    PRE0019 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition

    # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
    PRE0501 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash

    # precli/rules/python/third_party/cryptography/cryptography_weak_key.py
    PRE0502 = precli.rules.python.third_party.cryptography.cryptography_weak_key:CryptographyWeakKey

    # precli/rules/python/third_party/dill/dill_load.py
    PRE0503 = precli.rules.python.third_party.dill.dill_load:DillLoad

    # precli/rules/python/third_party/httpx/no_certificate_verify.py
    PRE0504 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify

    # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
    PRE0505 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode

    # precli/rules/python/third_party/pandas/pandas_read_pickle.py
    PRE0506 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle

    # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
    PRE0507 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify

    # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
    PRE0508 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash

    # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
    PRE0509 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash

    # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
    PRE0510 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext

    # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
    PRE0511 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod

    # precli/rules/python/third_party/PyYAML/yaml_load.py
    PRE0512 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad

    # precli/rules/python/third_party/requests/no_certificate_verify.py
    PRE0513 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
