[metadata]
name = precli
summary = Static analysis security tool command line
description_file =
    README.rst
author = Secure Sauce
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Security
url = https://github.com/securesauce/precli
download_url = https://pypi.org/project/precli/#files
project_urls =
    Release notes = https://github.com/securesauce/precli/releases

[entry_points]
console_scripts =
    precli = precli.cli.main:main

precli.parsers =
    # precli/parsers/go.py
    go = precli.parsers.go:Go

    # precli/parsers/java.py
    java = precli.parsers.java:Java

    # precli/parsers/python.py
    python = precli.parsers.python:Python

precli.rules.go =
    # precli/rules/go/stdlib/crypto_weak_cipher.py
    GO001 = precli.rules.go.stdlib.crypto_weak_cipher:WeakCipher

    # precli/rules/go/stdlib/crypto_weak_hash.py
    GO002 = precli.rules.go.stdlib.crypto_weak_hash:WeakHash

    # precli/rules/go/stdlib/crypto_weak_key.py
    GO003 = precli.rules.go.stdlib.crypto_weak_key:WeakKey

precli.rules.python =
    # precli/rules/python/stdlib/assert.py
    PY001 = precli.rules.python.stdlib.assert:Assert

    # precli/rules/python/stdlib/crypt/crypt_weak_hash.py
    PY002 = precli.rules.python.stdlib.crypt_weak_hash:CryptWeakHash

    # precli/rules/python/stdlib/ftplib_cleartext.py
    PY003 = precli.rules.python.stdlib.ftplib_cleartext:FtpCleartext

    # precli/rules/python/stdlib/hashlib_weak_hash.py
    PY004 = precli.rules.python.stdlib.hashlib_weak_hash:HashlibWeakHash

    # precli/rules/python/stdlib/hmac_timing_attack.py
    PY005 = precli.rules.python.stdlib.hmac_timing_attack:HmacTimingAttack

    # precli/rules/python/stdlib/hmac_weak_hash.py
    PY006 = precli.rules.python.stdlib.hmac_weak_hash:HmacWeakHash

    # precli/rules/python/stdlib/http_url_secret.py
    PY007 = precli.rules.python.stdlib.http_url_secret:HttpUrlSecret

    # precli/rules/python/stdlib/imaplib_cleartext.py
    PY008 = precli.rules.python.stdlib.imaplib_cleartext:ImapCleartext

    # precli/rules/python/stdlib/json_load.py
    PY009 = precli.rules.python.stdlib.json_load:JsonLoad

    # precli/rules/python/stdlib/logging_insecure_listen_config.py
    PY010 = precli.rules.python.stdlib.logging_insecure_listen_config:InsecureListenConfig

    # precli/rules/python/stdlib/marshal_load.py
    PY011 = precli.rules.python.stdlib.marshal_load:MarshalLoad

    # precli/rules/python/stdlib/nntplib_cleartext.py
    PY012 = precli.rules.python.stdlib.nntplib_cleartext:NntpCleartext

    # precli/rules/python/stdlib/pickle_load.py
    PY013 = precli.rules.python.stdlib.pickle_load:PickleLoad

    # precli/rules/python/stdlib/pop_cleartext.py
    PY014 = precli.rules.python.stdlib.poplib_cleartext:PopCleartext

    # precli/rules/python/stdlib/shelve_open.py
    PY015 = precli.rules.python.stdlib.shelve_open:ShelveOpen

    # precli/rules/python/stdlib/smtplib_cleartext.py
    PY016 = precli.rules.python.stdlib.smtplib_cleartext:SmtpCleartext

    # precli/rules/python/stdlib/ssl_create_unverified_context.py
    PY017 = precli.rules.python.stdlib.ssl_create_unverified_context:CreateUnverifiedContext

    # precli/rules/python/stdlib/ssl_insecure_tls_version.py
    PY018 = precli.rules.python.stdlib.ssl_insecure_tls_version:InsecureTlsVersion

    # precli/rules/python/stdlib/ssl_context_weak_key.py
    PY019 = precli.rules.python.stdlib.ssl_context_weak_key:SslContextWeakKey

    # precli/rules/python/stdlib/telnetlib_cleartext.py
    PY020 = precli.rules.python.stdlib.telnetlib_cleartext:TelnetlibCleartext

    # precli/rules/python/stdlib/tempfile_mktemp_race_condition.py
    PY021 = precli.rules.python.stdlib.tempfile_mktemp_race_condition:MktempRaceCondition

    # precli/rules/python/stdlib/ftplib_unverified_context.py
    PY022 = precli.rules.python.stdlib.ftplib_unverified_context:FtplibUnverifiedContext

    # precli/rules/python/stdlib/imaplib_unverified_context.py
    PY023 = precli.rules.python.stdlib.imaplib_unverified_context:ImaplibUnverifiedContext

    # precli/rules/python/stdlib/nntplib_unverified_context.py
    PY024 = precli.rules.python.stdlib.nntplib_unverified_context:NntplibUnverifiedContext

    # precli/rules/python/stdlib/poplib_unverified_context.py
    PY025 = precli.rules.python.stdlib.poplib_unverified_context:PoplibUnverifiedContext

    # precli/rules/python/stdlib/smtplib_unverified_context.py
    PY026 = precli.rules.python.stdlib.smtplib_unverified_context:SmtplibUnverifiedContext

    # precli/rules/python/stdlib/argparse_sensitive_info.py
    PY027 = precli.rules.python.stdlib.argparse_sensitive_info:ArgparseSensitiveInfo

    # precli/rules/python/stdlib/secrets_weak_token.py
    PY028 = precli.rules.python.stdlib.secrets_weak_token:SecretsWeakToken

    # precli/rules/python/stdlib/socket_unrestricted_bind.py
    PY029 = precli.rules.python.stdlib.socket_unrestricted_bind:SocketUnrestrictedBind

[build_sphinx]
all_files = 1
