# Copyright 2025 Secure Sauce LLC
# SPDX-License-Identifier: BUSL-1.1
[metadata]
name = precli
summary = Precaution security static analysis command line
description_file =
    README.rst
author = Secure Sauce
author_email = info@securesauce.dev
license = Other/Proprietary License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Natural Language :: Chinese (Simplified)
    Natural Language :: Chinese (Traditional)
    Natural Language :: English
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Italian
    Natural Language :: Japanese
    Natural Language :: Korean
    Natural Language :: Portuguese (Brazilian)
    Natural Language :: Russian
    Natural Language :: Spanish
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security
url = https://github.com/securesauce/precli
download_url = https://pypi.org/project/precli/#files
project_urls =
    Homepage = https://github.com/securesauce/precli
    Documentation = https://precli.readthedocs.io
    Source = https://github.com/securesauce/precli
    Issues = https://github.com/securesauce/precli/issues
    Changelog = https://github.com/securesauce/precli/releases
    Slack = https://secure-sauce.slack.com

[entry_points]
console_scripts =
    precli = precli.cli.main:main
    precli-init = precli.cli.init:main

precli.renderers =
    # precli/renderers/detailed.py
    detailed = precli.renderers.detailed:Detailed

    # precli/renderers/json.py
    json = precli.renderers.json:Json

    # precli/renderers/markdown.py
    markdown = precli.renderers.markdown:Markdown

    # precli/renderers/plain.py
    plain = precli.renderers.plain:Plain

precli.parsers =
    # precli/parsers/go.py
    go = precli.parsers.go:Go

    # precli/parsers/java.py
    java = precli.parsers.java:Java

    # precli/parsers/python.py
    python = precli.parsers.python:Python

precli.rules.go =
    # precli/rules/go/stdlib/crypto_weak_cipher.py
    GO001 = precli.rules.go.stdlib.crypto_weak_cipher:WeakCipher

    # precli/rules/go/stdlib/crypto_weak_hash.py
    GO002 = precli.rules.go.stdlib.crypto_weak_hash:WeakHash

    # precli/rules/go/stdlib/crypto_weak_key.py
    GO003 = precli.rules.go.stdlib.crypto_weak_key:WeakKey

    # precli/rules/go/stdlib/syscall_setuid_root.py
    GO004 = precli.rules.go.stdlib.syscall_setuid_root:SyscallSetuidRoot

precli.rules.java =
    # precli/rules/java/stdlib/javax_crypto_weak_cipher.py
    JAV001 = precli.rules.java.stdlib.javax_crypto_weak_cipher:WeakCipher

    # precli/rules/java/stdlib/java_security_weak_hash.py
    JAV002 = precli.rules.java.stdlib.java_security_weak_hash:MessageDigestWeakHash

    # precli/rules/java/stdlib/java_security_weak_key.py
    JAV003 = precli.rules.java.stdlib.java_security_weak_key:KeyPairGeneratorWeakKey

    # precli/rules/java/stdlib/java_security_weak_random.py
    JAV004 = precli.rules.java.stdlib.java_security_weak_random:SecureRandomWeakRandom

    # precli/rules/java/stdlib/javax_servlet_http_insecure_cookie.py
    JAV005 = precli.rules.java.stdlib.javax_servlet_http_insecure_cookie:InsecureCookie

    # precli/rules/java/stdlib/java_net_insecure_cookie.py
    JAV006 = precli.rules.java.stdlib.java_net_insecure_cookie:InsecureCookie

precli.rules.python =
    # precli/rules/python/stdlib/assert.py
    PY001 = precli.rules.python.stdlib.assert:Assert

    # precli/rules/python/stdlib/crypt/crypt_weak_hash.py
    PY002 = precli.rules.python.stdlib.crypt_weak_hash:CryptWeakHash

    # precli/rules/python/stdlib/ftplib_cleartext.py
    PY003 = precli.rules.python.stdlib.ftplib_cleartext:FtpCleartext

    # precli/rules/python/stdlib/hashlib_weak_hash.py
    PY004 = precli.rules.python.stdlib.hashlib_weak_hash:HashlibWeakHash

    # precli/rules/python/stdlib/hmac_timing_attack.py
    PY005 = precli.rules.python.stdlib.hmac_timing_attack:HmacTimingAttack

    # precli/rules/python/stdlib/hmac_weak_hash.py
    PY006 = precli.rules.python.stdlib.hmac_weak_hash:HmacWeakHash

    # precli/rules/python/stdlib/http_url_secret.py
    PY007 = precli.rules.python.stdlib.http_url_secret:HttpUrlSecret

    # precli/rules/python/stdlib/imaplib_cleartext.py
    PY008 = precli.rules.python.stdlib.imaplib_cleartext:ImapCleartext

    # precli/rules/python/stdlib/json_load.py
    PY009 = precli.rules.python.stdlib.json_load:JsonLoad

    # precli/rules/python/stdlib/logging_insecure_listen_config.py
    PY010 = precli.rules.python.stdlib.logging_insecure_listen_config:InsecureListenConfig

    # precli/rules/python/stdlib/marshal_load.py
    PY011 = precli.rules.python.stdlib.marshal_load:MarshalLoad

    # precli/rules/python/stdlib/nntplib_cleartext.py
    PY012 = precli.rules.python.stdlib.nntplib_cleartext:NntpCleartext

    # precli/rules/python/stdlib/pickle_load.py
    PY013 = precli.rules.python.stdlib.pickle_load:PickleLoad

    # precli/rules/python/stdlib/pop_cleartext.py
    PY014 = precli.rules.python.stdlib.poplib_cleartext:PopCleartext

    # precli/rules/python/stdlib/shelve_open.py
    PY015 = precli.rules.python.stdlib.shelve_open:ShelveOpen

    # precli/rules/python/stdlib/smtplib_cleartext.py
    PY016 = precli.rules.python.stdlib.smtplib_cleartext:SmtpCleartext

    # precli/rules/python/stdlib/ssl_create_unverified_context.py
    PY017 = precli.rules.python.stdlib.ssl_create_unverified_context:CreateUnverifiedContext

    # precli/rules/python/stdlib/ssl_insecure_tls_version.py
    PY018 = precli.rules.python.stdlib.ssl_insecure_tls_version:InsecureTlsVersion

    # precli/rules/python/stdlib/ssl_context_weak_key.py
    PY019 = precli.rules.python.stdlib.ssl_context_weak_key:SslContextWeakKey

    # precli/rules/python/stdlib/telnetlib_cleartext.py
    PY020 = precli.rules.python.stdlib.telnetlib_cleartext:TelnetlibCleartext

    # precli/rules/python/stdlib/tempfile_mktemp_race_condition.py
    PY021 = precli.rules.python.stdlib.tempfile_mktemp_race_condition:MktempRaceCondition

    # precli/rules/python/stdlib/ftplib_unverified_context.py
    PY022 = precli.rules.python.stdlib.ftplib_unverified_context:FtplibUnverifiedContext

    # precli/rules/python/stdlib/imaplib_unverified_context.py
    PY023 = precli.rules.python.stdlib.imaplib_unverified_context:ImaplibUnverifiedContext

    # precli/rules/python/stdlib/nntplib_unverified_context.py
    PY024 = precli.rules.python.stdlib.nntplib_unverified_context:NntplibUnverifiedContext

    # precli/rules/python/stdlib/poplib_unverified_context.py
    PY025 = precli.rules.python.stdlib.poplib_unverified_context:PoplibUnverifiedContext

    # precli/rules/python/stdlib/smtplib_unverified_context.py
    PY026 = precli.rules.python.stdlib.smtplib_unverified_context:SmtplibUnverifiedContext

    # precli/rules/python/stdlib/argparse_sensitive_info.py
    PY027 = precli.rules.python.stdlib.argparse_sensitive_info:ArgparseSensitiveInfo

    # precli/rules/python/stdlib/secrets_weak_token.py
    PY028 = precli.rules.python.stdlib.secrets_weak_token:SecretsWeakToken

    # precli/rules/python/stdlib/socket_unrestricted_bind.py
    PY029 = precli.rules.python.stdlib.socket_unrestricted_bind:SocketUnrestrictedBind

    # precli/rules/python/stdlib/socketserver_unrestricted_bind.py
    PY030 = precli.rules.python.stdlib.socketserver_unrestricted_bind:SocketserverUnrestrictedBind

    # precli/rules/python/stdlib/http_server_unrestricted_bind.py
    PY031 = precli.rules.python.stdlib.http_server_unrestricted_bind:HttpServerUnrestrictedBind

    # precli/rules/python/stdlib/xmlrpc_server_unrestricted_bind.py
    PY032 = precli.rules.python.stdlib.xmlrpc_server_unrestricted_bind:XmlrpcServerUnrestrictedBind

    # precli/rules/python/stdlib/re_denial_of_service.py
    PY033 = precli.rules.python.stdlib.re_denial_of_service:ReDenialOfService

    # precli/rules/python/stdlib/hmac_weak_key.py
    PY034 = precli.rules.python.stdlib.hmac_weak_key:HmacWeakKey

    # precli/rules/python/stdlib/hashlib_improper_prng.py
    PY035 = precli.rules.python.stdlib.hashlib_improper_prng:HashlibImproperPrng

    # precli/rules/python/stdlib/os_loose_file_perm.py
    PY036 = precli.rules.python.stdlib.os_loose_file_perm:OsLooseFilePermissions

    # precli/rules/python/stdlib/pathlib_loose_file_perm.py
    PY037 = precli.rules.python.stdlib.pathlib_loose_file_perm:PathlibLooseFilePermissions

    # precli/rules/python/stdlib/os_setuid_root.py
    PY038 = precli.rules.python.stdlib.os_setuid_root:OsSetuidRoot

    # precli/rules/python/stdlib/socket_no_timeout.py
    PY039 = precli.rules.python.stdlib.socket_no_timeout:SocketNoTimeout

    # precli/rules/python/stdlib/smtplib_no_timeout.py
    PY040 = precli.rules.python.stdlib.smtplib_no_timeout:SmtplibNoTimeout

    # precli/rules/python/stdlib/imaplib_no_timeout.py
    PY041 = precli.rules.python.stdlib.imaplib_no_timeout:ImaplibNoTimeout

    # precli/rules/python/stdlib/nntplib_no_timeout.py
    PY042 = precli.rules.python.stdlib.nntplib_no_timeout:NntplibNoTimeout

    # precli/rules/python/stdlib/poplib_no_timeout.py
    PY043 = precli.rules.python.stdlib.poplib_no_timeout:PoplibNoTimeout

    # precli/rules/python/stdlib/telnetlib_no_timeout.py
    PY044 = precli.rules.python.stdlib.telnetlib_no_timeout:TelnetlibNoTimeout

    # precli/rules/python/stdlib/ftplib_no_timeout.py
    PY045 = precli.rules.python.stdlib.ftplib_no_timeout:FtplibNoTimeout

    # precli/rules/python/stdlib/ssl_no_timeout.py
    PY046 = precli.rules.python.stdlib.ssl_no_timeout:SslNoTimeout

precli.targets =
    # precli/targets/file.py
    file = precli.targets.file:File

    # precli/targets/github.py
    github = precli.targets.github:GitHub

    # precli/targets/pypi.py
    pypi = precli.targets.pypi:PyPI
